data/derived/comb/progs/unify/prog3146.ml.out
Characters 28-61:
  wwhile (fun func f b -> (f, f b <> b),b);;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
